[package]
name = "vswhom-sys"
description = "Pure FFI to Jon Blow's VS discovery script"
repository = "https://github.com/nabijaczleweli/vswhom-sys.rs"
readme = "README.md"
keywords = ["visual-studio", "FFI"]
categories = ["external-ffi-bindings"]
license = "MIT"
version = "0.1.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]

[dependencies]
